general/platform-components/helm/kyverno-policies/tests/traefik/cluster-admin/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: traefik-cluster-admin
policies:
  - /tmp/kyverno-traefik.yaml
resources:
  - ../resources/tlsoptions.yaml
userinfo: user_info.yaml
results:
  # skip because admin skips the rule
  - policy: disallow-default-tlsoptions
    rule: disallow-default-tlsoptions
    resources:
      - default
    kind: TLSOption
    result: skip
  - policy: disallow-default-tlsoptions-in-cel
    rule: disallow-default-tlsoptions-in-cel
    resources:
      - default
    kind: TLSOption
    result: skip
