general/platform-components/helm/kyverno-policies/tests/traefik/cluster-admin/user_info.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: user-info
clusterRoles:
  - cluster-admin
userInfo:
  username: admin@example.com
